--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>
-			Goodzone clone-Maishiy texnika kreditga sotib olish imkoni bizni internet magazinimizda mavjud. Bitovoy
-			texnika uchun maqbul narxlari GOODZONE saytida tasvirlangan
-		</title>
+		Magnit-Maishiy texnika kreditga sotib olish imkoni bizni internet magazinimizda mavjud. Bitovoy
+			texnika uchun maqbul narxlari 
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
